--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
 <head>
 	
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+<link href="https://fonts.googleapis.com/css?family=Butcherman|Walter+Turncoat" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 <script type="text/javascript" src="game.js"></script>
 
-<title>Guess Which Letter</title>
+<title>Psychic Survival Game</title>
 
 </head>
 <body>
+
+<h1>Would you like to play a game?</h1>
+
+<h2>Guess what letter I'm thinking of... or die!</h2>
+<!-- Needs instructions to user in paragraph -->
+<div id="game">
+
+<!-- Want space for letter to be revealed on win/out of guesses -->
+
+<!-- Scoring will go in here -->
+
+</div>
+
+
+
+
 
 </body>
 </html>
