Psudo code steps needed for game

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <h1>Would you like to play a game?</h1>
 
+<!-- Image here -->
+
 <h2>Guess what letter I'm thinking of... or die!</h2>
+
 <!-- Needs instructions to user in paragraph -->
 <div id="game">
 
