--- a/index.html
+++ b/index.html
@@ -6,25 +6,32 @@
 <link href="https://fonts.googleapis.com/css?family=Butcherman|Walter+Turncoat" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-<script type="text/javascript" src="game.js"></script>
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 
 <title>Psychic Survival Game</title>
 
 </head>
 <body>
 
+<!-- Needs styling to center all -->
+
 <h1>Would you like to play a game?</h1>
 
 <!-- Image here -->
 
 <h2>Guess what letter I'm thinking of... or die!</h2>
-
+<br>
 <!-- Needs instructions to user in paragraph -->
 <div id="game">
-
+	<p>The computer chose </p>
 <!-- Want space for letter to be revealed on win/out of guesses -->
-
+<br>
 <!-- Scoring will go in here -->
+<p>Letters you've guessed: </p>
+<p>Guessed you have left: </p>
+<br>
+<p>Times your life has been spared: </p>
+<p>Times you've died: </p>
 
 </div>
 
