--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-<link href="https://fonts.googleapis.com/css?family=Butcherman|Walter+Turncoat" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<!-- <link href="https://fonts.googleapis.com/css?family=Butcherman|Walter+Turncoat" rel="stylesheet"> -->
+<!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
 
 <script type="text/javascript" src="assets/javascript/game.js"></script>
 
@@ -21,23 +21,25 @@
 
 <h2>Guess what letter I'm thinking of... or die!</h2>
 <br>
+<p id="instructions">You have 9 chances to guess which letter I'm thinking of. Only letters count, no other keys on the keyboard. Good luck.</p>
 <!-- Needs instructions to user in paragraph -->
 <div id="game">
-	<p>The computer chose </p>
-<!-- Want space for letter to be revealed on win/out of guesses -->
-<br>
+	<br>
 <!-- Scoring will go in here -->
-<p>Letters you've guessed: </p>
-<p>Guessed you have left: </p>
-<br>
-<p>Times your life has been spared: </p>
-<p>Times you've died: </p>
+	<p id="lettersGuessed">Letters you've guessed: </p>
+	<p id="chancesLeft">Chances you have left: </p>
+	<br>
+	<p id="computerReveal">The computer chose: </p>
+<!-- Want space for letter to be revealed on win/out of guesses -->
+	<br>
+	<p id="wins">Times your life has been spared: </p>
+	<p id="losses">Times you've died: </p>
 
 </div>
 
 
 
 
-
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
