Add functions for everything imaginable

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 <div id="game">
 	<br>
 <!-- Scoring will go in here -->
-	<p id="lettersGuessed">Letters you've guessed: </p>
-	<p id="chancesLeft">Chances you have left: </p>
+	<p id="lettersGuessed"> </p>
+	<p id="chancesLeft"> </p>
 	<br>
-	<p id="computerReveal">The computer chose: </p>
+	<p id="computerReveal"> </p>
 <!-- Want space for letter to be revealed on win/out of guesses -->
 	<br>
-	<p id="wins">Times your life has been spared: </p>
-	<p id="losses">Times you've died: </p>
+	<p id="wins"> </p>
+	<p id="losses"> </p>
 
 </div>
 
