--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Butcherman|Walter+Turncoat" rel="stylesheet"> -->
 <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
 
-<script type="text/javascript" src="assets/javascript/game.js"></script>
-
 <title>Psychic Survival Game</title>
 
 </head>
@@ -21,8 +19,9 @@
 
 <h2>Guess what letter I'm thinking of... or die!</h2>
 <br>
-<p id="instructions">You have 9 chances to guess which letter I'm thinking of. Only letters count, no other keys on the keyboard. Good luck.</p>
-<!-- Needs instructions to user in paragraph -->
+<p id="instructions">You have 9 chances to guess which letter I'm thinking of. Good luck.</p>
+<!-- Hopefully figure out how to limit keys to only letters and display alert if other key is pressed -->
+
 <div id="game">
 	<br>
 <!-- Scoring will go in here -->
@@ -30,15 +29,12 @@
 	<p id="chancesLeft"> </p>
 	<br>
 	<p id="computerReveal"> </p>
-<!-- Want space for letter to be revealed on win/out of guesses -->
+<!-- Want this to reveal letter on win/out of guesses -->
 	<br>
 	<p id="wins"> </p>
 	<p id="losses"> </p>
 
 </div>
-
-
-
 
 <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
