--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
 <h2>Guess what letter I'm thinking of... or die!</h2>
 <br>
+<p>Open the console to play this sweet console-only game < /sarcasm></p>
+<br>
 <p id="instructions">You have 9 chances to guess which letter I'm thinking of. Good luck.</p>
+<p>*Imagine animation of jigsaw puppet going by and being really creepy*</p>
 <!-- Hopefully figure out how to limit keys to only letters and display alert if other key is pressed -->
 
 <div id="game">
