Add text to html elements to get updated by js

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 <!-- Would be nice if spacing didn't jump -->
 <ul id="game">
 
-	<li id="lettersGuessed"> </li>
-	<li id="chancesLeft"> </li>
+	<li id="lettersGuessed">Letters you've guessed: </li>
+	<li id="chancesLeft">Chances you have left: </li>
 	<br>
 	<li id="computerReveal"> </li>
 <!-- Want this to reveal letter on win/out of guesses -->
 	<br>
-	<li id="wins"> </li>
-	<li id="losses"> </li>
+	<li id="wins">Times you've survived: </li>
+	<li id="losses">Times you've died: </li>
 </ul>
 </section>
 
