Remove console-only comment, 'cause things are working on the page now (yay)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h2>Guess what letter I'm thinking of... or die!</h2>
 
 <br>
-<p>Open the console to play this sweet console-only game < /sarcasm></p>
+<!-- <p>Open the console to play this sweet console-only game < /sarcasm></p> -->
 <br>
 <br>
 <p>You have 9 chances to guess which letter I'm thinking of. Good luck.</p>
@@ -34,13 +34,15 @@
 <ul id="game">
 
 	<li id="lettersGuessed">Letters you've guessed: </li>
+	<br>
 	<li id="chancesLeft">Chances you have left: </li>
 	<br>
-	<li id="computerReveal"> </li>
-<!-- Want this to reveal letter on win/out of guesses -->
 	<br>
 	<li id="wins">Times you've survived: </li>
 	<li id="losses">Times you've died: </li>
+	<br>
+	<li id="computerReveal"> </li>
+<!-- Want this to reveal letter on win/out of guesses -->
 </ul>
 </section>
 
