Update last of required parts; looks to be working on page

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <br>
 <!-- <p>Open the console to play this sweet console-only game < /sarcasm></p> -->
 <br>
-<br>
+
 <p>You have 9 chances to guess which letter I'm thinking of. Good luck.</p>
 <br>
 <p id="wish">*Imagine animation of jigsaw puppet going by and it being really creepy and awesome*</p>
-<!-- Hopefully figure out how to limit keys to only letters and display alert if other key is pressed -->
+<!-- Hopefully figure out how to limit keys to only letters and display alert if other key is pressed ~FIXED -->
 <br>
-
+<br>
 <!-- Scoring will go in here -->
 <!-- Would be nice if spacing didn't jump -->
 <ul id="game">
@@ -44,6 +44,8 @@
 	<li id="computerReveal"> </li>
 <!-- Want this to reveal letter on win/out of guesses -->
 </ul>
+<br>
+<!-- <img id="puppet" src="assets/images/billy-on-bike.jpg" /> -->
 </section>
 
 
